[gd_scene load_steps=14 format=3 uid="uid://c8k5h7h0cdiv2"]

[ext_resource type="Texture2D" uid="uid://dhglfmexgpsw8" path="res://assets/enemies/crawling_enemy.png" id="1_s86uq"]
[ext_resource type="Script" path="res://scripts/crawling_enemy.gd" id="1_v3381"]
[ext_resource type="PackedScene" uid="uid://bexn610a8mmg" path="res://scenes/hurtbox.tscn" id="2_tas3h"]
[ext_resource type="PackedScene" uid="uid://b8ewwpijlarlp" path="res://scenes/hitbox.tscn" id="3_064fa"]
[ext_resource type="PackedScene" uid="uid://drv25xhx23l5d" path="res://scenes/statistics.tscn" id="5_eclce"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uf3xw"]
size = Vector2(14, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfdd4"]
atlas = ExtResource("1_s86uq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bps81"]
atlas = ExtResource("1_s86uq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh2o3"]
atlas = ExtResource("1_s86uq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv8rq"]
atlas = ExtResource("1_s86uq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8js2e"]
atlas = ExtResource("1_s86uq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_406ux"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfdd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bps81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh2o3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv8rq")
}],
"loop": true,
"name": &"crawl",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8js2e")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v8bt2"]
size = Vector2(14, 4)

[node name="CrawlingEnemy" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 15
script = ExtResource("1_v3381")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_uf3xw")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_406ux")
animation = &"fall"
autoplay = "crawl"

[node name="Hurtbox" parent="." instance=ExtResource("2_tas3h")]
position = Vector2(0, -8)
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_uf3xw")

[node name="Hitbox" parent="." instance=ExtResource("3_064fa")]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_v8bt2")

[node name="FloorCast" type="RayCast2D" parent="."]
position = Vector2(0, -3)
target_position = Vector2(0, 11)
collision_mask = 3

[node name="WallCast" type="RayCast2D" parent="."]
position = Vector2(0, -4)
target_position = Vector2(4, 0)
collision_mask = 3

[node name="Statistics" parent="." instance=ExtResource("5_eclce")]
max_health = 2

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="no_health" from="Statistics" to="." method="_on_statistics_no_health"]
